# synaptic-wars-neuro-engine-mvp

./: .editorconfig  .env.example  .eslintrc.cjs  .gitignore  README.md  index-mvp.html  mvp-main.js  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/: CONTRIBUTING.md  SECURITY.md  UPGRADE-REPORT.md  dependabot.yml  deploy.yml
.github/workflows/: ci.yml  deploy.yml  neuro-testing.yml
neuro-engine/: neuro-bridge.js
scripts/: bootstrap.ps1
src/: index.ts
src/synaptic_wars_mvp/: __init__.py  core.py
tests/: index.test.ts  test_basic.py
ui/: neuro-dashboard-enhanced.js
